<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg"
    >

    <include
        layout="@layout/title_bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
    <LinearLayout
        android:id="@+id/total_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:orientation="vertical">


        <EditText
            android:id="@+id/mail_editor"
            style="@style/common_editor_style"
            android:layout_marginLeft="@dimen/dp_36"
            android:layout_marginRight="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_22"
            android:gravity="center_vertical"
            android:hint="@string/input_mailbox"
             />


        <Button
            android:id="@+id/next"
            style="@style/common_button_style"
            android:layout_marginLeft="@dimen/dp_36"
            android:layout_marginRight="@dimen/dp_36"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/selector_common_corners_button"
            android:text="@string/recover_passwords"
            android:textColor="@android:color/white" />

    </LinearLayout>
        
      <LinearLayout
          android:id="@+id/success_ll"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:gravity="center"
          android:visibility="gone"
          >
          
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:drawableTop="@drawable/ic_email_success"
              android:drawablePadding="@dimen/dp_18"
              android:layout_marginTop="-100dp"
              android:gravity="center"
              android:text="@string/recover_passwords_success"
              android:textColor="@color/common_black_text"
              android:textSize="@dimen/sp_18"
              />

      </LinearLayout>
        



    </FrameLayout>

</LinearLayout>
