<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/app_bg" >
    <include
        layout="@layout/title_bar"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/user_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@mipmap/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_22"
            android:text="@string/welcome_tip"
            android:textColor="@color/common_black_text"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_36"
            android:layout_marginRight="@dimen/dp_36"
            android:orientation="vertical">


                <EditText
                    android:id="@+id/account_editor"
                    style="@style/common_editor_style"
                    android:drawableLeft="@mipmap/ic_email"
                    android:drawablePadding="8dip"
                    android:hint="请输入您的邮箱"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="16dp"
                    />



                <EditText
                    android:id="@+id/psw_editor"
                    style="@style/common_editor_style"
                    android:drawableLeft="@mipmap/ic_pwd"
                    android:hint="请输入密码"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    />


        </LinearLayout>

        <Button
            android:id="@+id/login"
            style="@style/common_button_style"
            android:layout_marginLeft="@dimen/dp_36"
            android:layout_marginRight="@dimen/dp_36"
            android:background="@drawable/selector_common_corners_button"
            android:text="@string/login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_login_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
         >

        <TextView
            android:id="@+id/forgot_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_36"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:gravity="left"
            android:text="@string/forgot_psw"
            android:textColor="@color/common_black_text"
            android:textSize="@dimen/sp_14" />


    </RelativeLayout>

</RelativeLayout>