<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_height"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="#fff"
            app:expandedTitleMarginStart="48dp"
            >

            <LinearLayout
                android:id="@+id/ll_user_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:id="@+id/rl_user_center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:clickable="true">

                        <com.nuoxin.enterprise.widget.CircleImageView
                            android:id="@+id/avatar_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@null"
                            android:src="@mipmap/ic_user_avater"
                            app:border_color="@android:color/white"
                            app:border_width="2dp" />

                        <ImageView
                            android:id="@+id/iv_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/avatar_image"
                            android:layout_alignRight="@id/avatar_image" />

                        <TextView
                            android:id="@+id/name_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/avatar_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/black_text"
                            android:textSize="16sp" />
                    </RelativeLayout>
                    <RelativeLayout
                        style="@style/no_bg_title_bar_style"
                        android:layout_alignParentTop="true">

                        <LinearLayout
                            android:id="@+id/right_bar_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:addStatesFromChildren="true"
                            android:clickable="true"
                            android:focusable="true">

                            <TextView
                                android:id="@+id/right_text"
                                style="@style/title_text_style"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:paddingLeft="10dp"
                                android:paddingRight="15dp"
                                android:text="退出"/>
                        </LinearLayout>

                    </RelativeLayout>
                </FrameLayout>


            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/separation_line_color" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/user_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_white_preferences_item"
                    android:clickable="true"
                    android:paddingBottom="15dip"
                    android:paddingTop="15dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/user_id"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/employee_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@null"
                        android:textColor="@color/common_black_text"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/separation_line_color" />

                <RelativeLayout
                    android:id="@+id/user_mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_white_preferences_item"
                    android:clickable="true"
                    android:paddingBottom="15dip"
                    android:paddingTop="15dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/user_mobile"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/user_mobile_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@null"
                        android:textColor="@color/common_black_text"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/separation_line_color" />

                <RelativeLayout
                    android:id="@+id/user_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_white_preferences_item"
                    android:clickable="true"
                    android:paddingBottom="15dip"
                    android:paddingTop="15dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/user_email"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/user_email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@null"
                        android:textColor="@color/common_black_text"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/separation_line_color" />

                <RelativeLayout
                    android:id="@+id/user_department_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_white_preferences_item"
                    android:clickable="true"
                    android:paddingBottom="15dip"
                    android:paddingTop="15dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/user_department"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/user_department_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@null"
                        android:textColor="@color/common_black_text"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/separation_line_color" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
